--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,5 +1,6 @@
 .container {
   padding: 0 20px;
+  overflow-x: hidden;
 
   @media (min-width: $tablet-width) {
     padding: 0 30px;
@@ -7,6 +8,7 @@
 
   @media (min-width: $desktop-width) {
     max-width: 1440px;
+    margin: 0 auto;
     padding: 0 110px;
   }
 }
