--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -14,19 +14,11 @@
 }
 
 .footer__map {
-  width: 320px;
+  width: 100%;
   height: 362px;
 
   @media (min-width: $tablet-width) {
-    min-width: 768px;
     height: 400px;
-    margin: 0 0 0 -30px;
-  }
-
-  @media (min-width: $desktop-width) {
-    min-width: 1440px;
-    height: 400px;
-    margin: 0 0 0 -110px;
   }
 }
 
