--- a/source/sass/blocks/gift.scss
+++ b/source/sass/blocks/gift.scss
@@ -1,5 +1,5 @@
 .gift {
-  width: 280px;
+  width: 100%;
   height: 289px;
   padding: 65px 60px 36px;
 
@@ -8,11 +8,11 @@
   background-color: $green-400;
   background-image: url("../img/gift-background-mobile.jpg");
   background-repeat: no-repeat;
-  background-position: 0 0;
+  background-position: center;
+  background-size: cover;
 
   @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
     align-items: center;
-    width: 708px;
     height: 200px;
 
     background-image: url("../img/gift-background-tablet.jpg");
