--- a/source/sass/blocks/main-product.scss
+++ b/source/sass/blocks/main-product.scss
@@ -2,15 +2,13 @@
   display: flex;
   flex-wrap: wrap;
 
-
-  @media (min-width: $tablet-width) {
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-
+  @media (min-width: $mobile-tablet-width) {
+    $background-translate-y: 100px;
+    align-items: flex-start;
+    justify-content: center;
     text-align: center;
 
-    background-image: linear-gradient(to top, $grey-400 430px, transparent 430px, transparent 100%);
+    background-image: linear-gradient(to top, $grey-400 calc(100% - #{$background-translate-y}), transparent calc(100% - #{$background-translate-y}), transparent 100%);
   }
 }
 
@@ -18,9 +16,10 @@
   width: 50%;
   padding: 0 0 9px;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $mobile-tablet-width) {
     width: 100%;
     margin: 0 0 33px;
+    padding: 0;
   }
 }
 
@@ -29,7 +28,7 @@
 
   text-transform: uppercase;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $mobile-tablet-width) {
     margin: 0 0 21px;
 
     br {
@@ -53,13 +52,18 @@
 
   text-align: center;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $mobile-tablet-width) {
     margin: 0 0 34px;
   }
 }
 
 .main-product__img {
   vertical-align: bottom;
+
+  @media (min-width: $mobile-tablet-width) {
+    width: 128px;
+    height: 156px;
+  }
 
   @media (min-width: $tablet-width) {
     width: 168px;
@@ -68,9 +72,10 @@
 }
 
 .main-product__button {
+  align-self: flex-end;
   margin: 13px 0 0;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $mobile-tablet-width) {
     margin: 0;
   }
 }
