--- a/source/sass/blocks/product-desc.scss
+++ b/source/sass/blocks/product-desc.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $mobile-tablet-width) {
     padding: 7px 0 7px;
     font-size: 16px;
     border-bottom: 1px solid $grey-500;
