--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -28,8 +28,9 @@ $basic-font: "Arial", sans-serif;
 $custom-font: "Oswald", "Arial", sans-serif;
 
 // Viewports
-
+$mobile-tablet-width: 450px;
 $mobile-width-only: 767px;
 $tablet-width: 768px;
+$tablet-desktop-width: 950px;
 $tablet-width-only: 1439px;
 $desktop-width: 1440px;
