--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -4,6 +4,7 @@ $black-300: #222222;
 $black-350: #111111;
 $black-400: #000000;
 $green-400: #68b738;
+$green-450: #63a63a;
 $green-500: #5eaa2f;
 $green-550: #5eaa2f;
 $grey-325: #e6e6e6;
