--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -12,7 +12,7 @@
 
   &--primary {
     width: 100%;
-    padding: 7px 25px;
+    padding: 11px 25px;
 
     font-size: 16px;
     line-height: 20px;
@@ -20,8 +20,19 @@
 
     background-color: $green-400;
 
+    &:hover {
+      background-color: $green-500;
+    }
+
+    &:active {
+      color: rgba($white-400, 0.3);
+    }
+
     @media (min-width: $tablet-width) {
-      padding: 10px 30px;
+      padding: 17px 26px;
+
+      font-size: 20px;
+      line-height: 20px;
     }
   }
 
