--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,5 +1,8 @@
 .example {
+  position: relative;
+
   padding: 27px 0 25px;
+  overflow: hidden;
 
   background-color: $grey-450;
 
@@ -8,10 +11,44 @@
 
     background-color: transparent;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 0 65px;
+
+    background-image: linear-gradient(to top, $grey-450 462px, transparent 462px, transparent 100%);
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+
+      width: 100vw;
+      height: 100%;
+
+      background-image: linear-gradient(to top, $grey-450 462px, transparent 462px, transparent 100%);
+    }
+
+    &::before {
+      left: 100%;
+    }
+
+    &::after {
+      right: 100%;
+    }
+  }
 }
 
 .example__title {
   margin: 0 0 33px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 65px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 46px 0 146px;
+  }
 }
 
 .example__desc {
@@ -34,9 +71,8 @@
   @media (min-width: $desktop-width) {
     display: grid;
 
-    gap: 80px;
-    grid-template-columns: 1fr 1fr;
-    background-color: $grey-400;
+    gap: 134px;
+    grid-template-columns: 436px 690px;
   }
 }
 
@@ -45,7 +81,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     margin: 0 0 59px;
   }
 
@@ -59,14 +95,21 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 0 15px;
+  margin: 0 0 34px;
 
   @media (min-width: $tablet-width) {
     margin: 0;
   }
 
   @media (min-width: $desktop-width) {
+    justify-content: flex-start;
     margin: 0 0 55px;
+  }
+}
+
+.example__item {
+  @media (min-width: $tablet-width) {
+    margin: 0 42px 0 0;
   }
 }
 
@@ -76,4 +119,32 @@
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
+
+  br {
+    display: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin: 10px 0 0;
+
+    font-size: 20px;
+    line-height: 26px;
+    text-align: right;
+
+    br {
+      display: block;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+
+    br {
+      display: none;
+    }
+
+    &--special {
+      margin: 0 0 0 62px;
+    }
+  }
 }
