--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,9 +1,7 @@
 .footer {
   position: relative;
 
-  &--theme-smoke {
-    background-color: $grey-400;
-  }
+  background-color: $grey-400;
 }
 
 .footer__contacts {
@@ -17,6 +15,8 @@
   width: 100%;
   height: 362px;
 
+  vertical-align: bottom;
+
   @media (min-width: $tablet-width) {
     height: 400px;
   }
@@ -29,36 +29,24 @@
     justify-content: space-between;
     align-items: center;
     min-height: 150px;
-    padding: 25 0;
-
-    background-color: $grey-400;
+    padding: 25px 0;
   }
 }
 
 .footer__logo {
-  padding: 39px 0 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 95px;
+  padding: 20px 0;
 
-  text-align: center;
+
+  @media (max-width: $mobile-width-only) {
+    border-bottom: 1px solid $grey-425;
+  }
 
   @media (min-width: $tablet-width) {
     padding: 0;
-  }
-
-  @media (max-width: $mobile-width-only) {
-    position: relative;
-
-    &::before,
-    &::after {
-      @include decor-pseudo-border;
-    }
-
-    &::before {
-      right: 50%;
-    }
-
-    &::after {
-      left: 50%;
-    }
   }
 }
 
@@ -72,20 +60,7 @@
 
 .footer__social {
   @media (max-width: $mobile-width-only) {
-    position: relative;
-
-    &::before,
-    &::after {
-      @include decor-pseudo-border;
-    }
-
-    &::before {
-      right: 50%;
-    }
-
-    &::after {
-      left: 50%;
-    }
+    border-bottom: 1px solid $grey-425;
   }
 }
 
