--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 20px 0;
+  padding: 20px 0 16px;
 
   @media (min-width: $tablet-width) {
     padding: 0;
@@ -11,7 +11,7 @@
 }
 
 .social__item {
-  margin: 0 36px 0 0;
+  margin: 0 35px 0 0;
 
   &:last-child {
     margin: 0;
