--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -33,5 +33,6 @@ $mobile-tablet-width: 450px;
 $mobile-width-only: 767px;
 $tablet-width: 768px;
 $tablet-desktop-width: 950px;
+$tablet-desktop-index-width: 1100px;
 $tablet-width-only: 1439px;
 $desktop-width: 1440px;
