--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,41 +1,25 @@
-.example {
-  position: relative;
+$text-width-desktop: 436px;
+$offset-background: 325px;
 
+.example {
   padding: 27px 0 25px;
-  overflow: hidden;
 
   background-color: $grey-450;
 
   @media (min-width: $tablet-width) {
-    padding: 0;
+    padding: 0 0 65px;
 
     background-color: transparent;
+    background-image: linear-gradient(to top, $grey-450 462px, transparent 462px, transparent 100%);
   }
 
   @media (min-width: $desktop-width) {
     padding: 0 0 65px;
 
-    background-image: linear-gradient(to top, $grey-450 462px, transparent 462px, transparent 100%);
-
-    &::before,
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
-
-      width: 100vw;
-      height: 100%;
-
-      background-image: linear-gradient(to top, $grey-450 462px, transparent 462px, transparent 100%);
-    }
-
-    &::before {
-      left: 100%;
-    }
-
-    &::after {
-      right: 100%;
-    }
+    background-image: linear-gradient(to left, $grey-450 calc(50% - #{$offset-background}), $grey-400 calc(50% - #{$offset-background}), $grey-400 100%);
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: auto 462px;
   }
 }
 
@@ -71,8 +55,8 @@
   @media (min-width: $desktop-width) {
     display: grid;
 
-    gap: 134px;
-    grid-template-columns: 436px 690px;
+    gap: 175px;
+    grid-template-columns: $text-width-desktop calc(100% - #{$text-width-desktop});
   }
 }
 
@@ -82,7 +66,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 0 0 59px;
+    margin: 0 0 80px;
   }
 
   @media (min-width: $desktop-width) {
@@ -94,7 +78,7 @@
 .example__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0 0 34px;
 
   @media (min-width: $tablet-width) {
@@ -108,6 +92,12 @@
 }
 
 .example__item {
+  margin: 0 31px 0 0;
+
+  &:last-child {
+    margin: 0;
+  }
+
   @media (min-width: $tablet-width) {
     margin: 0 42px 0 0;
   }
