--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -50,6 +50,12 @@
       }
     }
   }
+
+  &--theme-white {
+    @media (min-width: $desktop-width) {
+      border-color: $white-400;
+    }
+  }
 }
 
 .main-nav__link {
@@ -76,6 +82,9 @@
   @media (min-width: $desktop-width) {
     font-size: 20px;
     line-height: 30px;
-    color: $white-400;
+
+    &--theme-white {
+      color: $white-400;
+    }
   }
 }
