--- a/source/sass/blocks/form-top.scss
+++ b/source/sass/blocks/form-top.scss
@@ -2,7 +2,11 @@
   position: relative;
 
   margin: 0;
-  padding: 20px 0 22px 0;
+  padding: 0 0 25px;
+
+  &--special-padding {
+    padding: 22px 0 19px;
+  }
 
   &::before,
   &::after {
@@ -18,7 +22,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin: 0 0 71px;
+    margin: 0 0 46px;
 
     &::before,
     &::after {
@@ -33,7 +37,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 48%;
+    width: 47%;
     margin: 0;
     padding: 0;
   }
