--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "blocks/title.scss";
 @import "blocks/button.scss";
 @import "blocks/page.scss";
+@import "blocks/body.scss";
 @import "blocks/container.scss";
 @import "blocks/header.scss";
 @import "blocks/main-nav.scss";
